# FridaRustGum

./: Cargo.toml  build.rs  setup_frida.sh
.cargo/: config.toml
examples/: test1.rs
src/: error.rs  lib.rs  trace.rs
